test_suite/index_uninit_arr.out
index_uninit_arr.java: 9:  Semantic Error: Variable: `a` might have not been initialized.
