test_suite/index_uninit_arr.java
// -unused -no-style
class Main {
    public static void main(String[] a) { }
}

class A {
    public int foo() {
        int[] a;
        return a[0];
    }
}
